Edition in Javadoc (mostly formatting) and minor code simplifications. This commit should not change the behaviour of the Maven JAR plugin, except when a null argument is given to `getJarFile` in which case the `IllegalArgumentException` has been replaced by `NullPointerException`.